Fixed mobile bug

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                 <span>JAVASCRIPT</span>
                 <span>GIT</span>
                 <span>GITHUB</span>
-                <span>ADOBE XD</span>
+                <span>ADOBE_XD</span>
                 <span>CORELDRAW</span>
                 <span>PHOTOSHOP</span>
                 <span>FIGMA</span>
-                <span>MICROSOFT OFFICE</span>
+                <span>MICROSOFT_OFFICE</span>
             </div>
         </section>
         <section class="portfolio" id="portfolio">
