--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <img src="./assets/javascript.svg" alt="javascript">
                     </div>
                     <div class="links">
-                        <a href="https://akimzzy.github.io/Speed-typer/" target="_blank">
+                        <a href="https://akimzzy.github.io/Slider/" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="22.666" height="22.467" viewBox="0 0 22.666 22.467"><g transform="translate(-0.941 15.036) rotate(-60)"><path d="M11.639,220.145H.572a.572.572,0,0,1,0-1.145H11.639a.572.572,0,0,1,0,1.145Zm0,0" transform="translate(0 -210.844)"/><path d="M224.576,140.881a.573.573,0,0,1-.4-.978l2.648-2.648-2.648-2.648a.573.573,0,1,1,.81-.81l3.053,3.053a.573.573,0,0,1,0,.81l-3.053,3.053A.568.568,0,0,1,224.576,140.881Zm0,0" transform="translate(-215.99 -128.527)"/><path d="M44.326,17.123A8.352,8.352,0,0,1,36.512,11.8a.572.572,0,1,1,1.065-.418,7.25,7.25,0,1,0,0-5.306.572.572,0,1,1-1.065-.418,8.4,8.4,0,1,1,7.814,11.466Zm0,0" transform="translate(-35.167 0)"/></g></svg>
                         </a>
                         <a href="https://github.com/akimzzy/Speed-typer" target="_blank">
